Correct nav li spacing btwn 4 tablet

--- a/css/main.css
+++ b/css/main.css
@@ -573,7 +573,7 @@ input[type=button] {
   }
 
   header nav {
-    width: 20%;
+    width: 29%;
   }
 
   header nav ul {
@@ -751,6 +751,10 @@ input[type=button] {
 
   .content-wrapper {
     max-width: 960px;
+  }
+
+  header nav {
+    width: 20%;
   }
 
   h2 {
